--- a/restaurant.html
+++ b/restaurant.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="theme-color" content="#317EFB"/>
+  <meta name="Description" content="A Restaurant Reviews PWA App.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="/manifest.json">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
